src/static/stylus/room.module.styl
@require 'common.styl'

.room
    flex 1 1
    height 100%
    display block
    position relative
    overflow hidden
    & > button
        height 42px
        width 340px
        margin 40px
.match
    height 100%
    position relative

.btnToLobby
    position absolute
    bottom 14px
    left 14px
    width 220px
    z-index 2
    height 42px
    width 312px
    outline none
    border none
    cursor pointer
    border-radius 5px
    text-align center
    font-size 14px 
    padding 10px   
    box-sizing border-box
    background-color corange1
    &:hover
        background-color corange2
    @media all and (max-width 940px)
        left auto 
        bottom auto
        top 14px
        right 14px
        padding 0
        box-sizing content-box
        {IconBig}

        border-radius 30px
        & > span //Hide text in span
            display none
    & > svg
        display none
        @media all and (max-width 940px) 
            display block //Show icon instead text
            & > :nth-child(2)
                fill cwhite1

        

